Fixed screen bug on mobile

--- a/styles.css
+++ b/styles.css
@@ -33,9 +33,7 @@ body {
   left: 0;
 }
 
-.hello-world h1 {
-  font-size: 120px;
-}
+
 
 .nav-menu {
   position: fixed;
